# textmate

./: .gitmodules  meson.build
extensions/: meson.build
parser/: meson.build
scopes/: meson.build
textmate/: main.cpp  textmate.cpp  textmate.h
textmate/data/: grammars.cpp  grammars.h  themes.cpp  themes.h
textmate/extensions/: extension.cpp  extension.h  tinyxml2.cpp  tinyxml2.h  utf8.h  util.cpp  util.h
textmate/parser/: grammar.cpp  grammar.h  parse.h  parser.cpp  pattern.cpp  pattern.h  private.h  reader.cpp  reader.h
textmate/scopes/: match.cpp  parse.cpp  scope.cpp  scope.h  scopes_parse.h  types.h
textmate/theme/: colors.h  rgb.h  stringop.cpp  theme.cpp  theme.h
theme/: meson.build
